# threedpass

./: .gitignore  Cargo.toml  README.md  analysis_options.yaml  build.yaml  flutter_launcher_icons.yaml  local.properties  pubspec.yaml
.github/workflows/: ci.yaml  dart_code_metrics.yaml  dartcodemetrics.yaml
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
assets/translations/: de.json  en.json  es.json  sr.json  zh.json
integration_test/: scan_page_test.dart  test.dart  test_app.dart  test_config.dart
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_settings_page.dart  cache_provider.dart  main.dart  model.dart  object3d.dart  page_cmp.dart  page_res.dart  page_settings.dart  save_dialog.dart  setup.dart  store.dart  store.g.dart
lib/common/: app_text_styles.dart  button_styles.dart  logger.dart
lib/core/: call_extrinsic_usecase.dart  ferry_cache.dart  init_graphql_client.dart  usecase.dart
lib/core/architecture/: get_data_usecase.dart  local_repository_interface.dart  remote_repository_interface.dart
lib/core/dio/: di_dio.dart  dio_observer.dart
lib/router/: bottom_sheet_route.dart  route_names.dart  route_paths.dart  router.dart  router.gr.dart
native/calc-ffi/: Cargo.toml
native/p3d/: Cargo.toml  export.env  script.sh
native/p3d/src/: algo_grid.rs  contour.rs  lib.rs  polyline.rs
test/: test.dart  test_config.dart
test/utils/: assets_formatting.dart  big_int_json_helper.dart  tx_logs_handler.dart
(+1336 files in other folders)
